# kwikquant

./: .dockerignore  .editorconfig  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  dependency-check-suppressions.xml  pom.xml  pyproject.toml  requirements-worker.txt
.githooks/: pre-commit
.github/workflows/: ci.yml  deploy.yml  frontend-design-lint.yml  security-scan.yml
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml  kwikquant-webhook.service  kwikquant-worker.Dockerfile  post-receive.sh  server-deploy.sh  webhook-receiver.py
docs/: behavior-contract.md  frontend-mock-audit.md  tech-debt-frontend-gaps.md  tech-debt.md  ws-contract.md
frontend/: .gitignore  DESIGN.md  Dockerfile  SCAFFOLD-REF.md  eslint.config.js  index.html  nginx.conf  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/e2e/: batch1a-publish.spec.ts  batch1b-backtest.spec.ts  global-setup.ts  workbench.spec.ts
frontend/prototypes/: workbench.html
frontend/scripts/: lint-design-usage.mjs  lint-ws-contract.mjs  shot-theme.mjs
frontend/src/: App.tsx  index.css  main.tsx  routes.test.tsx  routes.test.tsx0  routes.tsx
kwikquant/: __init__.py  account.py  client.py  data.py  errors.py  report.py  stream.py  trade.py
kwikquant/adapters/: __init__.py  pandas_adapter.py
kwikquant_worker/: __init__.py  data_loader.py  event_loop.py  health_server.py  strategy.py  worker_server.py
kwikquant_worker/adapters/: __init__.py
scripts/: check-frontend-codegen.sh  start-backend.sh
scripts/ops/: gen-secrets.sh
(+939 files in other folders)
