[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kwikquant"
version = "0.1.0"
description = "KwikQuant Python SDK — thin client for the KwikQuant Java API"
requires-python = ">=3.11"
dependencies = ["httpx>=0.28"]

[project.optional-dependencies]
stream = ["websockets>=12.0"]
worker = ["psycopg[binary]>=3.1"]

[tool.setuptools.packages.find]
include = ["kwikquant*", "kwikquant_worker*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 110
target-version = "py311"
